--- a/index.html
+++ b/index.html
@@ -1,15 +1,22 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="UTF-8">
-    <title>Interactive Bivariate Gaussian</title>
-  </head>
-  <body>
-  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.2/math.min.js'></script>
-  <div id='canvasControls'></div>
-  <canvas id="canvas1">If you see this then your browser doesn't support
-    the necessary web tech!</canvas>
 
-  
-  </body>
+<head>
+  <meta charset="UTF-8">
+  <title>Interactive Bivariate Gaussian</title>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/mathjs/6.2.2/math.min.js'></script>
+  <script src="https://docs.opencv.org/3.4.1/opencv.js"></script>
+
+</head>
+
+<body>
+
+  <div id='canvasControls'></div>
+
+  <canvas id="canvas1" style='display:block; width:100%;height:500px'>If you see this then your browser doesn't support
+    the necessary web tech!</canvas>
+</body>
+
+<script src='.script.js'></script>
+
 </html>
