--- a/index.html
+++ b/index.html
@@ -11,12 +11,13 @@
 
 <body>
 
+  <p> From my <a href='https://atomscott.github.io/blog/en/2019-11-06-Interactive-Bivariate-Gaussian/'>website</a>. The code can be found <a hred='https://github.com/AtomScott/Interactive-Bivariate-Gaussian'> this github repo</a>. Feel free to use and improve, feedback is welcome.
+  
   <div id='canvasControls'></div>
-
   <canvas id="canvas1" style='display:block; width:100%;height:500px'>If you see this then your browser doesn't support
     the necessary web tech!</canvas>
 </body>
 
-<script src='.script.js'></script>
+<script src='./script.js'></script>
 
 </html>
